2003-02-06  Carl Worth  <cworth@isi.edu>

	* xrpen.c (_XrPenVerticesNeeded): Fixed to use determinant rather
	than eigenvalues to compute maximal scaling of radius. Now avoids
	embarrassing segfaults due to NaN from the eigenvalue computation.

2003-01-28  Carl Worth  <cworth@isi.edu>

	* xrtraps.c (_XrTrapsTessellateTriangle): Fixed to not re-order
	the array provided as an argument. (Note: the rectangle and
	polyghon tessellators still perform reordering).

	* xrstroker.c (_XrStrokerJoin):
	(_XrStrokerCap): Implemented round caps and joins.
	(_XrStrokerDoneSubPath): Fixed initial cap, (was always being
	drawn on the inside previously).

	* xrpen.c (_XrPenInit): Fixed to keep pen vertex theta values all
	in device space.
	(_XrPenAddPoints): Removed the silly flags from the pen vertices,
	(in favor of just using the FindActiveVertex functions)
	(_XrPenFindActiveCWVertexIndex):
	(_XrPenFindActiveCCWVertexIndex): Added functions needed for round
	caps/joins.

	* xrgstate.c (_XrGStateSetDash): Fixed to accept a NULL dash array
	to revert to no dashing.

2003-01-28  Carl Worth  <cworth@east.isi.edu>

	* xrtraps.c (_XrTrapsTessellateTriangle): Restored triangle
	tessellation functionality, (I think it's correct this time).

	* xrstroker.c (_XrStrokerJoin): Bevel joins now use triangle
	tessellation rather than polygon tessellation.

2003-01-24  Carl Worth  <cworth@east.isi.edu>

	* xrpolygon.c (_XrPolygonAddEdge): Fixed to handle multiple
	sub-polygons.

	* xrstroker.c (_XrStrokerJoin): Fixed handling of miter limit.

	* local.def: Added local.def for building outside the xc tree.

2002-12-03  Carl Worth  <cworth@isi.edu>

	* xrstroker.c (_XrStrokerJoin):
	(_XrStrokerCap): Fixed to track change in winding rule parameter
	to XrTrapsTessellatePolygon, (otherwise self-intersecting splines
	suddenly had holes).

	* xrpen.c (_XrPenStrokeSpline): Fixed to track change in winding
	rule parameter to XrTrapsTessellatePolygon.

2002-11-11  Carl Worth  <cworth@isi.edu>
