@@ -1,3 +1,8 @@
+2003-02-14  Carl Worth  <cworth@east.isi.edu>
+
+	* xrgstate.c (_XrGStateShowImageTransform): Fixed transformed
+	images which were sometimes 1 pixel too tall/wide.
+
 2003-02-06  Carl Worth  <cworth@isi.edu>
 
 	* xrpen.c (_XrPenVerticesNeeded): Fixed to use determinant rather
